--- a/Develop/style.css
+++ b/Develop/style.css
@@ -2,6 +2,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 1;
+  margin-bottom: 50px;
 }
 
 textarea{
@@ -21,13 +22,17 @@ textarea{
   border-bottom: 10px solid black;
 }
 
+.container {
+  border-bottom: 1px dashed #000000;
+}
+
 .description{
   white-space: pre-wrap;
 }
 
 .time-block{
-  text-align: center;
-  border-radius: 15px;
+  text-align: right;
+  padding: 15px;
 }
 
 .row {
@@ -65,7 +70,7 @@ textarea{
   color: white;
 }
 
-.saveBtn i:hover {
+.saveBtn:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
